--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,5 +1,11 @@
 // @import "../layout/content-sidebar";
 // @import "../layout/sidebar-content";
+
+/* -------------------------------------------------------------
+## Headers
+------------------------------------------------------------- */
+@import "../layout/headers.scss";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
