--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Clearings
 # Widgets
 # Content
+  ## Header
+  ## Footer
 	## Posts and pages
 	## Comments
 # Infinite scroll
@@ -46,7 +48,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Bootstrap
 --------------------------------------------------------------*/
-@import "bootstrap/bootstrap";
+//@import "bootstrap/bootstrap";
 
 /*--------------------------------------------------------------*/
 @import "variables-site/variables-site";
