--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -17,9 +17,13 @@
 
 .middled-image img{
 	display: block;
-	margin: 0 auto;
+	margin: 1rem auto;
 }
 
 .text_center{
 	text-align: center;
+}
+
+.left-aligned{
+	text-align: left;
 }
