--- a/sass/site/footer/_main-footer.scss
+++ b/sass/site/footer/_main-footer.scss
@@ -2,6 +2,8 @@
 ## Front Page Footer
 ------------------------------------------------------------- */
 .fornt-page_footer{
-	height: 40vh;
 	background-image: linear-gradient(-135deg, #3f97f7 0%, #a23bff 100%);
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+	color: $color__text-nav;
 }
