--- a/sass/site/primary/pages/_pages.scss
+++ b/sass/site/primary/pages/_pages.scss
@@ -1,2 +1,37 @@
-/*-------- Home Page -------------*/ 
-@import 'front-page';
+/*-------- Pages -------------*/ 
+.banner-wapper{
+	@include backgroundGradient(-128deg,$color__background_start,$color__background_middle,$color__background_end);
+
+	&.front-page{
+		height: 90vh;
+	}
+	
+	&.inner-pages{
+		height: 70vh;
+	}
+
+
+	.header-banner{
+	 @include backgroundImage('media/svg/mountain.svg', fixed , cover);
+	 @include middledBlockWrapper;
+
+		.banner-caption{
+
+			display: table-cell;
+			vertical-align: middle;
+			text-align: center;
+		}
+
+	}
+}
+
+/*------- All Courses ------*/
+
+.all-courese{
+	.all-courese__wrapper{
+		margin-top: -20vh;
+		background-color: $color__background-body;
+		border-radius: 4px;
+		 @include navBoxsadow();
+	}
+}
