--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,6 +1,6 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-	font-weight: 500;
+	font-weight: 400;
 }
 
 
@@ -14,4 +14,22 @@ h1, h2, h3, h4, h5, h6 {
 		font-weight: 400;
 		line-height: 150%;
 	}
+}
+
+.has_background_image{
+	h1{
+		margin-bottom: 4rem;
+	}
+}
+
+.has-icon{
+	h4{
+		@include font-size(1.3);
+		margin-bottom: 10px;
+	}
+	text-shadow:0 2px 4px rgba(0,0,0,0.10);
+}
+
+.fornt-page_footer h2{
+	margin-bottom: 2rem;
 }
