--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ h1, h2, h3, h4, h5, h6 {
 .fornt-page_footer h2 {
   margin-bottom: 2rem; }
 
+.all-course__wrapper .courese__description h3 {
+  font-size: 19.2px;
+  font-size: 1.2rem; }
+
 p {
   margin-bottom: 1.5em; }
 
@@ -424,6 +428,8 @@ body:not(.home) .navbar-brand img {
     height: 90vh; }
   .banner-wapper.inner-pages {
     height: 70vh; }
+  .banner-wapper.single-course {
+    height: 50vh; }
   .banner-wapper .header-banner {
     background-image: url("media/svg/mountain.svg");
     background-attachment: fixed;
@@ -434,14 +440,20 @@ body:not(.home) .navbar-brand img {
     .banner-wapper .header-banner .banner-caption {
       display: table-cell;
       vertical-align: middle;
-      text-align: center; }
+      text-align: center;
+      color: #fff;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
 
-/*------- All Courses ------*/
-.all-courese .all-courese__wrapper {
+/*------- All Wrappers------*/
+.all-types__wrapper, .single-coures__wrapper {
   margin-top: -20vh;
   background-color: #fff;
   border-radius: 4px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  padding: 15px 30px; }
+
+.single-coures__wrapper {
+  margin-top: -10vh; }
 
 .image__intro {
   padding: 4rem 0;
@@ -483,6 +495,13 @@ body:not(.home) .navbar-brand img {
   .has-icon span {
     min-width: 64px;
     margin-right: 15px; }
+
+.single-coures__wrapper figure {
+  max-width: 300px;
+  margin-top: -10vh; }
+  .single-coures__wrapper figure img {
+    border-radius: 50%;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
 /*--------------------------------------------------------------
 ## Comments
