--- a/style.css
+++ b/style.css
@@ -215,50 +215,6 @@ table {
     background-color: #f4cc20;
     color: #fff; }
 
-input[type="text"],
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="search"],
-input[type="number"],
-input[type="tel"],
-input[type="range"],
-input[type="date"],
-input[type="month"],
-input[type="week"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="color"],
-textarea {
-  color: #666;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  padding: 3px; }
-  input[type="text"]:focus,
-  input[type="email"]:focus,
-  input[type="url"]:focus,
-  input[type="password"]:focus,
-  input[type="search"]:focus,
-  input[type="number"]:focus,
-  input[type="tel"]:focus,
-  input[type="range"]:focus,
-  input[type="date"]:focus,
-  input[type="month"]:focus,
-  input[type="week"]:focus,
-  input[type="time"]:focus,
-  input[type="datetime"]:focus,
-  input[type="datetime-local"]:focus,
-  input[type="color"]:focus,
-  textarea:focus {
-    color: #111; }
-
-select {
-  border: 1px solid #ccc; }
-
-textarea {
-  width: 100%; }
-
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
@@ -344,6 +300,9 @@ textarea {
 .left-aligned {
   text-align: left; }
 
+.right-aligned {
+  text-align: right; }
+
 /*--------------------------------------------------------------
 # Clearings
 --------------------------------------------------------------*/
@@ -379,6 +338,23 @@ textarea {
   /* Make sure select elements fit in widgets. */ }
   .widget select {
     max-width: 100%; }
+
+.sp-login .modal-content {
+  position: relative; }
+  .sp-login .modal-content .close {
+    position: absolute;
+    z-index: 99;
+    right: 10px;
+    font-size: 28.8px;
+    font-size: 1.8rem; }
+
+.sp-login .modal-body .lwa-default {
+  padding: 15px; }
+
+.sp-login .modal-body .form-group {
+  margin-top: 1rem; }
+  .sp-login .modal-body .form-group .form-control {
+    width: 100%; }
 
 /*--------------------------------------------------------------
 # Content
@@ -445,15 +421,24 @@ body:not(.home) .navbar-brand img {
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
 
 /*------- All Wrappers------*/
-.all-types__wrapper, .single-coures__wrapper {
+.all-types__wrapper, .single-coures__wrapper, .inner-pages.block .container {
   margin-top: -20vh;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 3px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   padding: 15px 30px; }
 
-.single-coures__wrapper {
+.single-coures__wrapper, .inner-pages.block .container {
   margin-top: -10vh; }
+
+.inner-pages.block .container {
+  padding-top: 3rem;
+  padding-bottom: 3rem; }
+  .inner-pages.block .container h3 {
+    text-align: center;
+    font-size: 30.4px;
+    font-size: 1.9rem;
+    margin-bottom: 4rem; }
 
 .image__intro {
   padding: 4rem 0;
@@ -496,10 +481,10 @@ body:not(.home) .navbar-brand img {
     min-width: 64px;
     margin-right: 15px; }
 
-.single-coures__wrapper figure {
+.single-coures__wrapper figure, .inner-pages.block .container figure {
   max-width: 300px;
   margin-top: -10vh; }
-  .single-coures__wrapper figure img {
+  .single-coures__wrapper figure img, .inner-pages.block .container figure img {
     border-radius: 50%;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
